--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5"
   }
 }
